# studentcourse-management

./: .pre-commit-config.yaml  BATCH_PROCESSING_IMPLEMENTATION.md  DATABASE_DESIGN.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  playwright.config.ts  sample_data.py  sonar-project.properties  test_db.py
.claude/prds/: chinese-university-grade-management-system.md
.github/workflows/: ci-cd.yml
app/models/: __init__.py  audit_log.py
backend/: .env.example  .gitignore  DATABASE_IMPLEMENTATION_COMPLETE.md  Makefile  README.md  STATISTICS_ENGINE_IMPLEMENTATION.md  alembic.ini  init_db.py  main.py  pyproject.toml  requirements-dev.txt
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: admin.py  analytics.py  auth.py  batch_processing.py  courses.py  grades.py  reports.py  statistics.py  students.py  teachers.py  users.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  database.py  session_helper.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  audit_log.py  auth_log.py  base.py  course.py  enrollment.py  grade.py  user.py
backend/app/schemas/: __init__.py  admin.py  analytics.py  batch_processing.py  course.py  enrollment.py  grade.py  reports.py  students.py  token.py  user.py
backend/app/services/: admin.py  analytics.py  auth.py  batch_processing.py  gpa_calculation.py  grade_distribution.py  pdf_reports.py  performance_optimization.py  permissions.py  reports.py  statistical_reports.py  student.py  teacher.py  trend_analysis.py  user.py  visualization.py
backend/sample_data/: batch_import_template.csv  batch_import_template.xlsx  invalid_data_template.xlsx
backend/tests/: __init__.py  conftest.py  test_auth.py  test_batch_processing.py  test_courses.py  test_grades.py  test_integration.py  test_main.py  test_performance.py  test_security.py  test_statistics_engine.py  test_users.py
docs/: DEPLOYMENT_GUIDE.md  PERFORMANCE_REPORT.md  SECURITY_REPORT.md
e2e/: auth.spec.ts  course-management.spec.ts
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts  (+1 more)
monitoring/: alert_rules.yml  prometheus.yml
scripts/: backup.sh
(+43 files in other folders)
